翻译 Forge 核心服务 API / Translate Forge core service APIs
补齐持久任务调度契约，并将注册表、相机、范围剔除、流体、挖掘、进度同步与历史副作用链路完整翻译到 Forge 1.20.1。保留主线行为，不以删功能或空实现换取编译通过。

Complete durable task scheduling contracts and translate registry, camera, culling, fluid, mining, progression sync, and history effect paths to Forge 1.20.1 without removing behavior or introducing stubs.